--- a/style.css
+++ b/style.css
@@ -83,3 +83,19 @@ a.previous span, a.next span {
   height: 100vh;
   object-fit: cover;
 }
+
+div.wiper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  background-color: #000;
+  transform: translate(-100%, 0);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
