--- a/style.css
+++ b/style.css
@@ -95,7 +95,23 @@ div.wiper {
   transform: translate(-100%, 0);
 
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+}
 
+div.wiper img {
+  width: 75px;
+  animation: spin 5s infinite linear;
+}
+
+div.wiper div {
+  margin: 10px 0 0 0;
+  height: 90px;
+  overflow: hidden;
+}
+
+div.wiper h2 {
+  font-size: 60px;
+  height: 90px;
 }
